5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1578_1332.log
== TEST (2019-03-14 19:18:41) 
-- CODE:
aresta = 5 cm
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta = 5 cm
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:20:24) 
-- CODE:
aresta = 5 cm
area = 3/5 * (3a  ** 2) ** 2/2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta = 5 cm
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:20:49) 
-- CODE:
aresta = 5 
area = 3/5 * (3a  ** 2) ** 2/2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/5 * (3a  ** 2) ** 2/2
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:20:51) 
-- CODE:
aresta = 5 
area = 3/5 * (3a  ** 2) ** 2/2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/5 * (3a  ** 2) ** 2/2
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:20:55) 
-- CODE:
aresta = 5
area = 3/5 * (3a  ** 2) ** 2/2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/5 * (3a  ** 2) ** 2/2
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:09:07) 
-- CODE:
aresta =5
area = (3/5)*(3*0.5*aresta*2)
 
print(round(area, 4))
-- OUTPUT:
9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:09:16) 
-- CODE:
aresta =5
area = (3/5)*(3*0.5*aresta**2)
 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 18:09:21) 
-- CODE:
aresta =5
area = (3/5)*(3*0.5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.156962
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:09:51) 
-- CODE:
aresta =5
area = (3/2)*(3*0.5*aresta**2)
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:09:59) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5*aresta**2)
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 18:10:02) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.15349
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:24:42) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.173084
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:34:33) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.278991
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 19:33:22) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.207821
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:59:15) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.133546
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 18:36:38) 
-- CODE:
aresta =5
area = (3/2)*(3**0.5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.193969
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
